
Options
-------

* Add inventory function back in. Mysteriously removed during the
  Options rewrite.

Payment
-------

* Add Linkpoint payment module.

Jobs
----

* Remove update_locales job - as a consequence of the removal of the [find] usertag

Shadow
------

* Add stubs for commit and rollback methods, thanks to Thomas Weiss 
  <pater.noster@gmx.net> for report.

i18n
----

* Add and improve foundation and UI translations.

* localize script is now able to detect backtick quoting in [msg]
  
Debian
------

* Add Interchange variable MV_GETPPID_BROKEN to
  /etc/interchange/features.cfg in order to start Interchange 
  properly on systems with threaded Perl (Closes: #221939)

* Revive USE_FOUNDATION handling in interchange-ui postinst to
  keep 4.8.x interchange-cat-foundation catalogs running


------------------------------------------------------------------------------


Interchange 4.9.9 released 2003-10-31.

Core
----

* Remove long-deprecated %Safe hash. Use $CGI, $Carts, $Items, $Config,
  $Scratch, and $Values instead of $Safe{cgi} etc.

* Fix locking of NFS sessions.

* Make [bounce ...] more reliable with respect to terminating output
  and future parsing.

* Send Content-Size header with downloads.

* Add MD5 password support to UserDB. 
  To activate, use UserDB "md5" option, i.e.:

	UserDB   ui   md5   1

* Make $Tag object be rebuilt every time a new page is done.

* Fix bug in [PREFIX-discount-subtotal] where quantity was greater
  than one. We were overloading the discount_price() routine, which
  was dumb, so a new discount_subtotal() routine takes over.

* Add iso_time and null_time options for updating UserDB time_field:

	UserDB  default  null_time    1
	UserDB  default  iso_time     1

* Add stubs for log_error and errstr routines in the database
  modules.

* Fix for broken getppid() on Linux systems with threads enabled.
  To implement, use

        Variable   MV_GETPPID_BROKEN   1
